--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         "laravel/lumen-framework": "5.8.*",
         "vlucas/phpdotenv": "^3.0",
         "ramsey/uuid": "^3.7",
-        "moontoast/math": "^1.1",
+        "moontoast/math": "1.1.2 as 1.99.0",
         "aws/aws-sdk-php": "^3.45",
         "pusher/pusher-php-server": "^3.0",
         "laravel/tinker": "^1.0",
