--- a/.github/workflows/dev-staging.yml
+++ b/.github/workflows/dev-staging.yml
@@ -58,7 +58,7 @@ jobs:
             sudo chmod u=rwx,g=rw,o=rw ${{ secrets.APPDIR_STAGING_BUSINESS_CORE }}/storage/logs/lumen.log
             sudo chmod u=rwx,g=rx,o=x ${{ secrets.APPDIR_STAGING_BUSINESS_CORE }}/artisan
             find "${{ secrets.APPDIR_STAGING_BUSINESS_CORE }}" -type f -name '*.php' -exec chmod 644 {} \;
-            php artisan dorcas:setup --database="business-core"
+            php artisan dorcas:setup --reset
             php artisan dorcas:import-countries
             php artisan dorcas:import-states
             php artisan dorcas:roles-and-permissions
